# FastAPI-Instagram

./: .gitignore  main.py  pyproject.toml
auth/: authentication.py  oauth2.py
db/: db_comment.py  db_post.py  db_user.py  hashing.py  models.py
routers/: comment.py  post.py  schemas.py  user.py
